# senat-whatsapp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  schema.yml
.github/workflows/: deploy.yml
legal_form/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
legal_form/migrations/: 0001_initial.py
settings/: settings.py  urls.py
